[package]
name = "gizo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
#governor = "0.8.0"
reqwest = { version = "0.12.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
hyper = "1.6.0"
image = "0.25.5"
lazy_static = "1.5.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.2", features = ["limit"] }
tower-http = { version = "0.6.2", features = ["trace"] }
urlencoding = "2.1.3"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
